--- a/app/index.html
+++ b/app/index.html
@@ -26,6 +26,8 @@
 		</div>
 	</div>
 
+	<audio loop="" src="http://res3.maka.im/user/2443287/music/ef63ea952ceb6418908fb521c0a4f6b1.mp3" id="bgmedia" autoplay="" preload=""></audio>
+
 	<div class="menu">
 		<i class="icon audio"></i>
 		<i class="icon arrow"></i>
@@ -144,7 +146,9 @@
 						</div>
 						<div class="title">
 							<div class="bg rotateIn animated"></div>
-							<div class="bride"></div>
+							<div class="name">
+								<i class="rotateIn animated"></i>
+							</div>
 						</div>
 						<div class="float">
 							<div class="flower1">
@@ -210,7 +214,9 @@
 							<div class="bg">
 								<i class="rotateIn animated"></i>
 							</div>
-							<div class="croom"></div>
+							<div class="name">
+								<i class="rotateIn animated"></i>
+							</div>
 						</div>
 						<div class="float">
 							<div class="flower1">
@@ -244,7 +250,9 @@
 						<div class="body fadeIn animated"></div>
 						<div class="title">
 							<div class="bg rotateIn animated"></div>
-							<div class="text"></div>
+							<div class="text">
+								<i class="rotateIn animated"></i>
+							</div>
 						</div>
 					</div>
 					<div class="photo">
@@ -364,6 +372,9 @@
 				<div class="page page2">
 					<div class="title">
 						<div class="bg pullUp animated"></div>
+						<div class="text">
+							<i class="pullUp animated"></i>
+						</div>
 					</div>
 					<div class="head">
 						<div class="leaf-top fadeInDown animated"></div>
@@ -389,6 +400,17 @@
 						<div class="flower4 zoomIn animated"></div>
 						<div class="flower5 rotateIn animated"></div>
 						<div class="flower6 rotateInDownRight animated"></div>
+					</div>
+					<div class="content">
+						<div class="text1">
+							<i class="fadeIn animated"></i>
+						</div>
+						<div class="text2">
+							<i class="flipInX animated"></i>
+						</div>
+						<div class="text3">
+							<i class="zoomIn animated"></i>
+						</div>
 					</div>
 				</div>
 			</div>
