feat:微信分享图标

--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,8 @@
     </script>
 </head>
 <body>
+	<div style="opacity:0"><img src="./images/thumb.jpg"></div>
+
 	<div class="loading">
 		<div class="wrap">
 			<div class="pic"></div>
