--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@
     </script>
 </head>
 <body>
-	<div style="opacity:0"><img src="./images/thumb.jpg"></div>
+	<div style="display:none"><img src="./images/thumb.jpg"></div>
 
 	<div class="loading">
 		<div class="wrap">
