fix:微信分享图片不可见

--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@
     </script>
 </head>
 <body>
-	<div style="display:none"><img src="./images/thumb.jpg"></div>
+	<img src="./images/thumb.jpg" width="0" height="0" />
 
 	<div class="loading">
 		<div class="wrap">
