--- a/app/index.html
+++ b/app/index.html
@@ -32,7 +32,7 @@
 
 	<div class="menu">
 		<i class="icon audio"></i>
-		<i class="icon arrow"></i>
+		<i class="icon arrow" id="arrow"></i>
 	</div>
 
 	<div class="swiper-container" id="pages">
