--- a/app/index.html
+++ b/app/index.html
@@ -19,8 +19,6 @@
     </script>
 </head>
 <body>
-	<img src="./images/thumb.jpg" width="0" height="0" style="position: absolute" />
-
 	<div class="loading">
 		<div class="wrap">
 			<div class="pic"></div>
@@ -31,7 +29,7 @@
 	<audio loop="" src="http://res3.maka.im/user/2443287/music/ef63ea952ceb6418908fb521c0a4f6b1.mp3" id="bgmedia" autoplay="" preload=""></audio>
 
 	<div class="menu">
-		<i class="icon audio"></i>
+		<i class="icon audio" id="btn"></i>
 		<i class="icon arrow" id="arrow"></i>
 	</div>
 
