feat:手动触发音频播放

--- a/app/index.html
+++ b/app/index.html
@@ -24,12 +24,12 @@
 			<div class="pic"></div>
 			<div class="text"><i id="percent">0</i> %</div>
 		</div>
+		<div class="start" id="start">开启</div>
 	</div>
 
 	<audio loop="" src="http://res3.maka.im/user/2443287/music/ef63ea952ceb6418908fb521c0a4f6b1.mp3" id="bgmedia" autoplay="" preload=""></audio>
 
 	<div class="menu">
-		<i class="icon audio" id="btn"></i>
 		<i class="icon arrow" id="arrow"></i>
 	</div>
 
